--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,23 +3,224 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AirCast - Air Quality Forecast</title>
+    <title>AirCast - AI-Powered Air Quality Forecasting</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>🌍 AirCast</h1>
-            <p>Real-Time Air Quality Forecasts Powered by NASA TEMPO</p>
+    <!-- Animated Background -->
+    <div class="animated-bg">
+        <div class="gradient-orb orb-1"></div>
+        <div class="gradient-orb orb-2"></div>
+        <div class="gradient-orb orb-3"></div>
+    </div>
+
+    <!-- Header with Glass Effect -->
+    <header class="glass-header">
+        <div class="container header-content">
+            <div class="logo-section">
+                <i class="fas fa-wind logo-icon"></i>
+                <div>
+                    <h1>AirCast</h1>
+                    <p class="tagline">AI-Powered Air Quality Forecasting</p>
+                </div>
+            </div>
+            <div class="header-stats">
+                <div class="stat-card">
+                    <i class="fas fa-satellite"></i>
+                    <span>NASA TEMPO</span>
+                </div>
+                <div class="stat-card">
+                    <i class="fas fa-broadcast-tower"></i>
+                    <span>Ground Stations</span>
+                </div>
+                <div class="stat-card">
+                    <i class="fas fa-cloud-sun"></i>
+                    <span>Weather Data</span>
+                </div>
+            </div>
         </div>
     </header>
 
-    <div id="map"></div>
+    <!-- Main Content Area -->
+    <div class="main-container">
+        <!-- Left Sidebar - Controls & Info -->
+        <aside class="sidebar glass-card">
+            <div class="search-section">
+                <h3><i class="fas fa-location-dot"></i> Location</h3>
+                <div class="search-box">
+                    <input type="text" id="location-search" placeholder="Search location...">
+                    <button class="btn-search"><i class="fas fa-search"></i></button>
+                </div>
+                <button class="btn-location" onclick="getUserLocation()">
+                    <i class="fas fa-crosshairs"></i> Use My Location
+                </button>
+            </div>
 
-    <div id="loading" class="loading">
-        <p>Loading air quality data...</p>
+            <div class="current-aqi-display" id="current-aqi">
+                <h3>Current Air Quality</h3>
+                <div class="aqi-loading">
+                    <div class="spinner"></div>
+                    <p>Loading...</p>
+                </div>
+            </div>
+
+            <div class="health-alerts" id="health-alerts">
+                <h3><i class="fas fa-triangle-exclamation"></i> Health Alerts</h3>
+                <div class="alert-placeholder">No active alerts</div>
+            </div>
+
+            <div class="data-sources">
+                <h3><i class="fas fa-database"></i> Data Sources</h3>
+                <div class="source-list">
+                    <div class="source-item">
+                        <i class="fas fa-check-circle"></i>
+                        <span>NASA TEMPO Satellite</span>
+                    </div>
+                    <div class="source-item">
+                        <i class="fas fa-check-circle"></i>
+                        <span>OpenAQ Ground Stations</span>
+                    </div>
+                    <div class="source-item">
+                        <i class="fas fa-check-circle"></i>
+                        <span>OpenWeather API</span>
+                    </div>
+                </div>
+            </div>
+        </aside>
+
+        <!-- Center - Map -->
+        <main class="map-container">
+            <div id="map" class="map-display"></div>
+            
+            <!-- Map Controls Overlay -->
+            <div class="map-controls">
+                <button class="map-btn" onclick="toggleHeatmap()" title="Toggle Heatmap">
+                    <i class="fas fa-layer-group"></i>
+                </button>
+                <button class="map-btn" onclick="toggleSatellite()" title="Toggle Satellite View">
+                    <i class="fas fa-satellite"></i>
+                </button>
+                <button class="map-btn" onclick="refreshData()" title="Refresh Data">
+                    <i class="fas fa-rotate"></i>
+                </button>
+            </div>
+
+            <!-- Legend -->
+             <div class="aqi-legend">
+                <h3><i class="fas fa-palette"></i> AQI Scale</h3>
+                <div class="legend-items">
+                    <div class="legend-item">
+                        <span class="legend-color" style="background: #00E400;"></span>
+                        <span>Good (0-50)</span>
+                    </div>
+                    <div class="legend-item">
+                        <span class="legend-color" style="background: #FFFF00;"></span>
+                        <span>Moderate (51-100)</span>
+                    </div>
+                    <div class="legend-item">
+                        <span class="legend-color" style="background: #FF7E00;"></span>
+                        <span>Unhealthy Sensitive (101-150)</span>
+                    </div>
+                    <div class="legend-item">
+                        <span class="legend-color" style="background: #FF0000;"></span>
+                        <span>Unhealthy (151-200)</span>
+                    </div>
+                    <div class="legend-item">
+                        <span class="legend-color" style="background: #8F3F97;"></span>
+                        <span>Very Unhealthy (201-300)</span>
+                    </div>
+                    <div class="legend-item">
+                        <span class="legend-color" style="background: #7E0023;"></span>
+                        <span>Hazardous (300+)</span>
+                    </div>
+                </div>
+            </div>
+        </main>
+
+        <!-- Right Sidebar - Forecast & Charts -->
+        <aside class="forecast-panel glass-card">
+            <div class="forecast-header">
+                <h3><i class="fas fa-chart-line"></i> 6-Hour Forecast</h3>
+                <div class="forecast-toggle">
+                    <button class="toggle-btn active" onclick="showChart('aqi')">AQI</button>
+                    <button class="toggle-btn" onclick="showChart('weather')">Weather</button>
+                </div>
+            </div>
+
+            <div id="forecast-chart-container">
+                <canvas id="forecast-chart"></canvas>
+            </div>
+
+            <div class="pollutant-breakdown" id="pollutant-data">
+                <h4>Pollutant Levels</h4>
+                <div class="pollutant-loading">
+                    <div class="mini-spinner"></div>
+                </div>
+            </div>
+
+            <div class="weather-forecast" id="weather-data">
+                <h4><i class="fas fa-cloud-sun"></i> Weather Impact</h4>
+                <div class="weather-cards">
+                    <!-- Will be populated dynamically -->
+                </div>
+            </div>
+
+            <div class="comparison-section">
+                <h4><i class="fas fa-balance-scale"></i> Satellite vs Ground Data</h4>
+                <div id="comparison-chart"></div>
+            </div>
+        </aside>
     </div>
 
+    <!-- Enhanced Loading Overlay -->
+    <div id="loading-overlay" class="loading-overlay">
+        <div class="loading-content">
+            <div class="loading-spinner">
+                <div class="spinner-ring"></div>
+                <div class="spinner-ring"></div>
+                <div class="spinner-ring"></div>
+            </div>
+            <p class="loading-text">Fetching air quality data...</p>
+            <div class="loading-steps">
+                <span class="step active">Satellite Data</span>
+                <span class="step">Ground Stations</span>
+                <span class="step">Weather Forecast</span>
+            </div>
+        </div>
+    </div>
+
+    <!-- Enhanced Info Window Template -->
+    <template id="info-window-template">
+        <div class="enhanced-info-window">
+            <div class="info-header">
+                <h3 class="station-name"></h3>
+                <span class="info-close" onclick="closeInfoWindow()">×</span>
+            </div>
+            
+            <div class="aqi-display-large">
+                <div class="aqi-value"></div>
+                <div class="aqi-label"></div>
+            </div>
+
+            <div class="health-recommendation"></div>
+
+            <div class="measurements-grid"></div>
+
+            <div class="forecast-mini">
+                <h4>Next 6 Hours</h4>
+                <div class="forecast-timeline"></div>
+            </div>
+
+            <div class="data-attribution">
+                <i class="fas fa-info-circle"></i>
+                <span class="data-source-text"></span>
+            </div>
+        </div>
+    </template>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/map.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC-_zqbI3aKGW6J3rslTRljfvOuYCNS2Us&libraries=visualization&callback=initMap" async defer></script>
 </body>
