--- a/frontend/index.html
+++ b/frontend/index.html
@@ -71,6 +71,20 @@
                 <div class="alert-placeholder">No active alerts</div>
             </div>
 
+            <div class="health-alerts" id="health-alerts">
+                <h3><i class="fas fa-triangle-exclamation"></i> Health Alerts</h3>
+                <div class="alert-placeholder">No active alerts</div>
+            </div>
+
+            <div class="best-time-section" id="best-time-recommendations">
+                <h3><i class="fas fa-clock"></i> Best Time Outdoors</h3>
+                <div class="time-loading">
+                    <div class="mini-spinner"></div>
+                </div>
+            </div>
+
+            <div class="data-sources">
+
             <div class="data-sources">
                 <h3><i class="fas fa-database"></i> Data Sources</h3>
                 <div class="source-list">
@@ -85,6 +99,35 @@
                     <div class="source-item">
                         <i class="fas fa-check-circle"></i>
                         <span>OpenWeather API</span>
+                    </div>
+                </div>
+            </div>
+            <div class="aqi-legend">
+                <h3><i class="fas fa-palette"></i> AQI Scale</h3>
+                <div class="legend-items">
+                    <div class="legend-item">
+                        <span class="legend-color" style="background: #00E400;"></span>
+                        <span>Good (0-50)</span>
+                    </div>
+                    <div class="legend-item">
+                        <span class="legend-color" style="background: #FFFF00;"></span>
+                        <span>Moderate (51-100)</span>
+                    </div>
+                    <div class="legend-item">
+                        <span class="legend-color" style="background: #FF7E00;"></span>
+                        <span>Unhealthy for Sensitive (101-150)</span>
+                    </div>
+                    <div class="legend-item">
+                        <span class="legend-color" style="background: #FF0000;"></span>
+                        <span>Unhealthy (151-200)</span>
+                    </div>
+                    <div class="legend-item">
+                        <span class="legend-color" style="background: #8F3F97;"></span>
+                        <span>Very Unhealthy (201-300)</span>
+                    </div>
+                    <div class="legend-item">
+                        <span class="legend-color" style="background: #7E0023;"></span>
+                        <span>Hazardous (300+)</span>
                     </div>
                 </div>
             </div>
