Implemented when best to step out for user groups

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -76,9 +76,9 @@
                 <div class="alert-placeholder">No active alerts</div>
             </div>
 
-            <div class="best-time-section" id="best-time-recommendations">
-                <h3><i class="fas fa-clock"></i> Best Time Outdoors</h3>
-                <div class="time-loading">
+            <div class="user-safety-section" id="user-safety-guide">
+                <h3><i class="fas fa-users"></i> Activity Safety Guide</h3>
+                <div class="safety-loading">
                     <div class="mini-spinner"></div>
                 </div>
             </div>
