PHASE 4 COMPLEMETED MFERRSSS

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -191,7 +191,12 @@
                     <button class="toggle-btn" onclick="showChart('weather')">Weather</button>
                 </div>
             </div>
-
+            
+            <!-- Weather impacts appear here (above the chart) -->
+            <div id="weather-impacts" class="weather-impacts-section">
+                <!-- Dynamically populated by JavaScript -->
+            </div>
+            
             <div id="forecast-chart-container">
                 <canvas id="forecast-chart"></canvas>
             </div>
